--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -126,8 +126,8 @@
 
   @include a.desktop {
     background: url(/images/bg-footer-top-desktop.svg) no-repeat bottom
-      center/contain;
-    padding: 7rem;
+      center/100% 100%;
+    padding: 6rem;
   }
 }
 
